[gd_scene load_steps=14 format=2]

[ext_resource path="res://objects/board/Board.gd" type="Script" id=1]
[ext_resource path="res://tileset/tileset1.tres" type="TileSet" id=2]
[ext_resource path="res://objects/board/controllers/TeleportController.gd" type="Script" id=3]
[ext_resource path="res://objects/board/controllers/FireController.gd" type="Script" id=4]
[ext_resource path="res://objects/board/controllers/MoverController.gd" type="Script" id=5]
[ext_resource path="res://objects/board/controllers/HourglassController.gd" type="Script" id=6]
[ext_resource path="res://objects/board/controllers/IceController.gd" type="Script" id=7]
[ext_resource path="res://objects/board/controllers/BombController.gd" type="Script" id=8]
[ext_resource path="res://objects/board/controllers/TrapdoorController.gd" type="Script" id=9]
[ext_resource path="res://objects/board/controllers/PressurePlateController.gd" type="Script" id=10]
[ext_resource path="res://objects/board/controllers/DogController.gd" type="Script" id=11]
[ext_resource path="res://objects/board/controllers/InlawController.gd" type="Script" id=12]
[ext_resource path="res://objects/board/ColourBlindAssist.gd" type="Script" id=13]

[node name="Board" type="TileMap" groups=[
"board",
]]
tile_set = ExtResource( 2 )
cell_size = Vector2( 16, 16 )
format = 1
script = ExtResource( 1 )

[node name="Controllers" type="Node" parent="."]

[node name="MoverController" type="Node" parent="Controllers"]
script = ExtResource( 5 )

[node name="TeleportController" type="Node" parent="Controllers"]
script = ExtResource( 3 )

[node name="TrapdoorController" type="Node" parent="Controllers"]
script = ExtResource( 9 )

[node name="HourglassController" type="Node" parent="Controllers"]
script = ExtResource( 6 )

[node name="FireController" type="Node" parent="Controllers"]
script = ExtResource( 4 )

[node name="IceController" type="Node" parent="Controllers"]
script = ExtResource( 7 )

[node name="BombController" type="Node" parent="Controllers"]
script = ExtResource( 8 )

[node name="PressurePlateController" type="Node" parent="Controllers"]
script = ExtResource( 10 )

[node name="DogController" type="Node" parent="Controllers"]
script = ExtResource( 11 )

[node name="InlawController" type="Node" parent="Controllers"]
script = ExtResource( 12 )

[node name="Timer_FireFinished" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="Timer_ExplosionsFinished" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="Camera" type="Camera2D" parent="."]
anchor_mode = 0
current = true
zoom = Vector2( 0.5, 0.5 )

[node name="ColourBlindAssist" type="Node2D" parent="."]
z_index = 50
script = ExtResource( 13 )
[connection signal="timeout" from="Timer_FireFinished" to="." method="_on_Timer_FireFinished_timeout"]
[connection signal="timeout" from="Timer_ExplosionsFinished" to="." method="_on_Timer_ExplosionsFinished_timeout"]
